# stock-management

./: .gitignore  README.md  pyproject.toml  requirements.txt
contrib/: env_gen.py
project/: settings.py
project/core/: models.py
project/product/: models.py
project/product/migrations/: 0001_initial.py
