[tool.poetry]
name = "stock_management"
version = "0.1.0"
description = ""
authors = ["ThiagoDiasV <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^7.7.1"
black = "^19.10b0"
python-decouple = "^3.3"

[tool.black]
line-length = 79
target-version = ['py38']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

